--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-signal-funcURL=https://xmcl-signal-function.azurewebsites.net/api/signal-func?
+signal-funcURL=https://xmcl-signal-function.azurewebsites.net/api/negotiate?
